--- a/server/package.json
+++ b/server/package.json
@@ -17,17 +17,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@tbdex/http-client": "^1.1.0",
     "@tbdex/http-server": "^1.1.0",
+    "@web5/api": "^0.10.0",
     "@web5/credentials": "^1.0.3",
     "@web5/dids": "^1.1.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.4",
+    "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
