--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/index.ts",
     "postinstall": "prisma generate"
   },
+  "type": "module",
   "keywords": [
     "tbdex",
     "web5",
