--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ES2016",
+    "module": "NodeNext",
     "outDir": "dist",
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "NodeNext",
     "skipLibCheck": true,
-    "sourceMap": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "resolveJsonModule": true
   },
+  "exclude": ["node_modules"],
   "include": ["src/**/*"]
 }
