--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cached_network_image: ^3.4.0
   sliver_tools: ^0.2.12
   country_code_picker: ^3.0.0
+  crypto: ^3.0.3
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
