--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   country_code_picker: ^3.0.0
   crypto: ^3.0.3
   encrypt: ^5.0.3
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
