--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "@web5/api": "^0.10.0",
     "@web5/credentials": "^1.0.3",
     "@web5/dids": "^1.1.2",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "groq-sdk": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
