--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   crypto: ^3.0.3
   encrypt: ^5.0.3
   pinput: ^5.0.0
+  flutter_markdown: ^0.7.4+3
 
 dev_dependencies:
   flutter_test:
